--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,14 @@
 
   <!-- Page-specific (main) content here -->
   <main class="container">
+    <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form>
+        <textarea name="text" placeholder="What are you humming about?"></textarea>
+        <input type="submit" value="Tweet">
+        <span class="counter">140</span>
+      </form>
+    </section>
     <div>
       <p>
         Since we're fighting, if you ever have an affair with that guy, I will come to the hotel room and blow my
