updates to layout

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
+      <hr>
       <form action="/tweets" method="POST">
         <textarea name="text" placeholder="What are you humming about?"></textarea>
         <input type="submit" value="Tweet">
@@ -40,73 +41,86 @@
       </form>
     </section>
 
-    <div>
-      <p>
-        Since we're fighting, if you ever have an affair with that guy, I will come to the hotel room and blow my
-        brains
-        out all over your naked bodies. Prepare to be emancipated from your own inferior genes! Your blood will be my
-        lotion! S-S-Samantha.
-      </p>
-      <p>
-        I'd like to order one large phone with extra phones please. cell phone, no no no rotary... and payphone on
-        half.
-        Aw, geez. I'm Mr. Crowbar, and here is my friend, who is also a crowbar! Want to piss on him?
-      </p>
-      <p>
-        Then it's time to get your beak wet tonight playa! That, out there. That's my grave. On one of our adventures
-        Rick and I basically destroyed the whole world. So we bailed on that reality and we came to this one. Because
-        in
-        this one the world wasn't destroyed. And in this one, we were dead. So we came here a-a-and we buried ourselves
-        and we took their place. And every morning, Summer, I eat breakfast 2 You're talking about Inception? You don't
-        know me!
-      </p>
-      <p>
-        He's not a hot girl. He can't just bail on his life and set up shop in someone else's. You’re like Hitler, but
-        even Hitler cared about Germany or something. Nobody's killing me until after I catch my wife with another man.
-        Grassss... Taste bad!
-      </p>
-      <p>
-        Since we're fighting, if you ever have an affair with that guy, I will come to the hotel room and blow my
-        brains
-        out all over your naked bodies. Cause he roped me into this! It’s a new machine. It detects stuff all the way
-        up
-        your butt. He's not pressing charges. That's gotta be the you shot me equivalent of not being mad.
-      </p>
-      <p>
-        Well, she's my daughter, Summer. I outrank you. Or, family means nothing, in which case, don't play that card.
-        Don't be a baby! You avoid getting shot in real life all the time, Morty! Just do the same thing here and we'll
-        be fine! Don't Morty me! I tricked Rick into taking Dad on an adventure because I thought I could get a break
-        from this kind of shit! But no! Like father, like goddamn daughter! You wanna be like Rick?! Congratulations!
-        You're just as arrogant and just as irresponsible! I don't get it, and I don't need to.
-      </p>
-      <p>
-        Summer, next time we're hiding in a chlorkian echo nest, can you do me a favour and turn your ringer off?! We
-        will return… possibly in different clothing. I'm a bit of a stickler Meeseeks, what about your short game? Nice
-        to wheat you!
-      </p>
-      <p>
-        Lemme hear everybody say hey-yo! All the ladies say yeaaah! Everybody over thirty do this with your hand!
-        Everybody with a red shirt jump up and down! Yo, everyone whose first name begins with an L who isn't hispanic,
-        walk in a circle the same number of times as the square root of your age times teeenn! There's pros and cons to
-        every alternate timeline. Fun facts about this one – It's got giant, telepathic spiders, 11 9/11s, and the best
-        ice cream in the multiverse! Listen, Morty, I hate to break it to you but what people call love is just a
-        chemical reaction that compels animals to breed. Yea and I made the stars that became the carbon in your
-        mothers
-        ovaries!
-      </p>
-      <p>
-        I just wanna die! We're gonna nine eleven this bitch unless Morty gets better math grades! You don't know me!
-        Full disclosure, Morty - it's not. Temporary superintelligence is just a side effect of the Megaseeds
-        dissolving
-        in your rectal cavity.
-      </p>
-      <p>
-        Nice, Mrs Pancakes. Real nice. Snuffles was my slave name. You can call me Snowball, because my fur is pretty
-        and
-        white. Shut the fuck up about moonmen! What, I'm gonna touch it, and you're gonna tell me it's an alien dick or
-        something?
-      </p>
-    </div>
+    <section class="tweets">
+      <div>
+        <p>
+          Since we're fighting, if you ever have an affair with that guy, I will come to the hotel room and blow my
+          brains
+          out all over your naked bodies. Prepare to be emancipated from your own inferior genes! Your blood will be my
+          lotion! S-S-Samantha.
+        </p>
+        <p>
+          I'd like to order one large phone with extra phones please. cell phone, no no no rotary... and payphone on
+          half.
+          Aw, geez. I'm Mr. Crowbar, and here is my friend, who is also a crowbar! Want to piss on him?
+        </p>
+        <p>
+          Then it's time to get your beak wet tonight playa! That, out there. That's my grave. On one of our adventures
+          Rick and I basically destroyed the whole world. So we bailed on that reality and we came to this one. Because
+          in
+          this one the world wasn't destroyed. And in this one, we were dead. So we came here a-a-and we buried
+          ourselves
+          and we took their place. And every morning, Summer, I eat breakfast 2 You're talking about Inception? You
+          don't
+          know me!
+        </p>
+        <p>
+          He's not a hot girl. He can't just bail on his life and set up shop in someone else's. You’re like Hitler,
+          but
+          even Hitler cared about Germany or something. Nobody's killing me until after I catch my wife with another
+          man.
+          Grassss... Taste bad!
+        </p>
+        <p>
+          Since we're fighting, if you ever have an affair with that guy, I will come to the hotel room and blow my
+          brains
+          out all over your naked bodies. Cause he roped me into this! It’s a new machine. It detects stuff all the way
+          up
+          your butt. He's not pressing charges. That's gotta be the you shot me equivalent of not being mad.
+        </p>
+        <p>
+          Well, she's my daughter, Summer. I outrank you. Or, family means nothing, in which case, don't play that
+          card.
+          Don't be a baby! You avoid getting shot in real life all the time, Morty! Just do the same thing here and
+          we'll
+          be fine! Don't Morty me! I tricked Rick into taking Dad on an adventure because I thought I could get a break
+          from this kind of shit! But no! Like father, like goddamn daughter! You wanna be like Rick?! Congratulations!
+          You're just as arrogant and just as irresponsible! I don't get it, and I don't need to.
+        </p>
+        <p>
+          Summer, next time we're hiding in a chlorkian echo nest, can you do me a favour and turn your ringer off?! We
+          will return… possibly in different clothing. I'm a bit of a stickler Meeseeks, what about your short game?
+          Nice
+          to wheat you!
+        </p>
+        <p>
+          Lemme hear everybody say hey-yo! All the ladies say yeaaah! Everybody over thirty do this with your hand!
+          Everybody with a red shirt jump up and down! Yo, everyone whose first name begins with an L who isn't
+          hispanic,
+          walk in a circle the same number of times as the square root of your age times teeenn! There's pros and cons
+          to
+          every alternate timeline. Fun facts about this one – It's got giant, telepathic spiders, 11 9/11s, and the
+          best
+          ice cream in the multiverse! Listen, Morty, I hate to break it to you but what people call love is just a
+          chemical reaction that compels animals to breed. Yea and I made the stars that became the carbon in your
+          mothers
+          ovaries!
+        </p>
+        <p>
+          I just wanna die! We're gonna nine eleven this bitch unless Morty gets better math grades! You don't know me!
+          Full disclosure, Morty - it's not. Temporary superintelligence is just a side effect of the Megaseeds
+          dissolving
+          in your rectal cavity.
+        </p>
+        <p>
+          Nice, Mrs Pancakes. Real nice. Snuffles was my slave name. You can call me Snowball, because my fur is pretty
+          and
+          white. Shut the fuck up about moonmen! What, I'm gonna touch it, and you're gonna tell me it's an alien dick
+          or
+          something?
+        </p>
+      </div>
+    </section>
   </main>
 
 </body>
