--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <h2>Compose Tweet</h2>
       <hr>
       <form action="/tweets" method="POST">
-        <textarea name="text" placeholder="What are you humming about?"></textarea>
+        <textarea id="tweet-text" name="text" placeholder="What are you humming about?"></textarea>
         <input type="submit" value="Tweet">
         <span class="counter">140</span>
       </form>
@@ -124,5 +124,8 @@
   </main>
 
 </body>
+
+<!-- import char count in new tweet box -->
+<script type="text/javascript" src="scripts/composer-char-counter.js"></script>
 
 </html>
