further changes to visual style of tweets

--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,11 @@
 
     <section id="tweet-list">
       <article class="tweet">
-        <header>Test</header>
+        <header>Test Person</header>
 
-        <form>This is a test</form>
+        <form>This is a test post!</form>
 
-        <footer>Test</footer>
+        <footer>10 days ago</footer>
       </article>
     </section>
   </main>
