continued work on style of tweets

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,11 @@
 
     <section id="tweet-list">
       <article class="tweet">
-        <header>Test Person</header>
+        <header>
+          <img src="https://bit.ly/2tujxhq" alt="Profile Pic">
+          <name>Test Person</name>
+          <user>@testPers</user>
+        </header>
 
         <form>This is a test post!</form>
 
