finalized initial pass on visual style of tweets

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,12 @@
 
         <form>This is a test post!</form>
 
-        <footer>10 days ago</footer>
+        <footer>
+          <age>10 days ago</age>
+          <buttons>🍕</buttons>
+          <buttons>☃️</buttons>
+          <buttons>🗑</buttons>
+        </footer>
       </article>
     </section>
   </main>
