minor code refactoring, initial implementation of submit button

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <!-- handling of submitting new tweet -->
+  <script type="text/javascript" src="/scripts/submit.js"></script>
+  <!-- import char count in new tweet box -->
+  <script type="text/javascript" src="scripts/composer-char-counter.js"></script>
 </head>
 
 <body>
@@ -48,7 +52,5 @@
 
 </body>
 
-<!-- import char count in new tweet box -->
-<script type="text/javascript" src="scripts/composer-char-counter.js"></script>
 
 </html>
