creating test script for mongoDB

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <!-- import char count in new tweet box -->
   <script type="text/javascript" src="scripts/composer-char-counter.js"></script>
+  <!-- temp script for mongoDB test -->
+  <script type="text/javascript" src="scripts/mongoTest.js"></script>
 </head>
 
 <body>
