--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <hr>
     <form action="/tweets" method="POST">
       <textarea class="tweet-text" name="text" placeholder="What are you humming about?"></textarea>
-      <input type="submit" value="Tweet">
+      <input class="submit-button" type="submit" value="Tweet">
       <span class="error"></span>
       <span class="counter">140</span>
     </form>
